<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="32dp"
        android:drawableStart="@drawable/ic_baseline_arrow_back_24"
        android:drawablePadding="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/drafts" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:drawableEnd="@drawable/send_to_server"
        android:drawablePadding="8dp"
        android:text="@string/send_to_server"
        android:textColor="#D42488"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:drawableEnd="@drawable/ic_baseline_cached_24"
        android:drawablePadding="8dp"
        android:text="@string/send"
        android:textColor="#D42488"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:drawableEnd="@drawable/ic_baseline_done_all_24"
        android:drawablePadding="8dp"
        android:text="@string/sent"
        android:textColor="#D42488"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPhoto"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginVertical="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:srcCompat="@drawable/ic_launcher_background" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/ivImage"
        app:layout_constraintStart_toEndOf="@id/ivImage"
        app:layout_constraintTop_toTopOf="@id/ivImage"
        tools:text="dsfvfvaw" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivImage"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintEnd_toStartOf="@id/tvUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
        app:srcCompat="@drawable/splash_screen" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_baseline_calendar_month_24"
        android:drawablePadding="4dp"
        android:textColor="#79747E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvUserName"
        tools:text="dfvjejvrfmk" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:background="#EBEBEB"
        app:layout_constraintTop_toBottomOf="@id/tvUserName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:drawableStart="@drawable/ic_baseline_map_24"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/ivImage"
        app:layout_constraintTop_toBottomOf="@id/ivImage"
        tools:text="gjevjnkerjkf" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTextReview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddress"
        tools:text="@string/new_review" />


</androidx.constraintlayout.widget.ConstraintLayout>